--- a/Web WareHouse/WebWareHouse.UI/WebWareHouse.UI.csproj
+++ b/Web WareHouse/WebWareHouse.UI/WebWareHouse.UI.csproj
@@ -343,6 +343,7 @@
     <Content Include="Scripts\knockout-2.2.0.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\validations\LoginValidation.js" />
+    <Content Include="Scripts\validations\OperationValidation.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
