--- a/Web WareHouse/WebWareHouse.UI/Views/Web.config
+++ b/Web WareHouse/WebWareHouse.UI/Views/Web.config
@@ -23,6 +23,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Optimization" />
         <add namespace="System.Web.Routing" />
+        <add namespace="Webwarehouse.UI.Helpers"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
